# Surface-Inspector-Remote

./: .gitignore  README.md
.github/workflows/: build.yml
Java/: README.md  build.gradle  settings.gradle
Java/apps/: build.gradle
Java/apps/src/main/java/ninox360/demo/: RemoteInteractionDemo.java
Java/libs/: build.gradle
Java/libs/src/main/java/ninox360/util/: HttpCommunicationUtil.java  PacketRemoteResponse.java  RemoteAPI.java
Python/: README.md  pyproject.toml  requirements.txt  setup.py
Python/SIRemote/: RemoteApi.py  __init__.py
Python/apps/: RemoteInteractionDemo.py
Python/libs/: HttpCommunicationUtil.py  RemoteApi.py
